update images and posts

--- a/projetos/2018-10-19-api-rest.md
+++ b/projetos/2018-10-19-api-rest.md
@@ -3,7 +3,7 @@ date: 2018-10-19
 title: Api Rest
 description: Api CRUD com php e Mysql
 badges: [php, mysql]
-img: /assets/img/apirest.png
+img: /assets/img/apirest.webp
 page: projetos
 ---
 
